IngressController/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ing-lab2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ing-lab2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: hashicorp/http-echo:1.0
        args: ["-listen=:8080", "-text=frontend OK"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ing-lab2
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: ing-lab2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: hashicorp/http-echo:1.0
        args: ["-listen=:8080", "-text=api OK"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: ing-lab2
spec:
  selector:
    app: api
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: ing-lab2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin
        image: hashicorp/http-echo:1.0
        args: ["-listen=:8080", "-text=admin OK"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: ing-lab2
spec:
  selector:
    app: admin
  ports:
  - name: http
    port: 80
    targetPort: 8080
