IngressController/ingress-02-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-ing
  namespace: ing-lab2
spec:
  ingressClassName: cilium
  tls:
  - hosts:
      - shop.local
    secretName: shop-tls
  rules:
  - host: "shop.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: api
            port:
              number: 80
      - pathType: Prefix
        path: "/admin"
        backend:
          service:
            name: admin
            port:
              number: 80
